// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders size 'lg' correctly 1`] = `
<button
  class="btn btn-lg"
  type="button"
>
  Hello world
</button>
`;

exports[`Button Renders size 'sm' correctly 1`] = `
<button
  class="btn btn-sm"
  type="button"
>
  Hello world
</button>
`;

exports[`Button Renders variant 'danger' correctly 1`] = `
<button
  class="btn btn-danger"
  type="button"
>
  Hello world
</button>
`;

exports[`Button Renders variant 'info' correctly 1`] = `
<button
  class="btn btn-info"
  type="button"
>
  Hello world
</button>
`;

exports[`Button Renders variant 'link' correctly 1`] = `
<button
  class="btn btn-link"
  type="button"
>
  Hello world
</button>
`;

exports[`Button Renders variant 'merged' correctly 1`] = `
<button
  class="btn btn-merged"
  type="button"
>
  Hello world
</button>
`;

exports[`Button Renders variant 'primary' correctly 1`] = `
<button
  class="btn btn-primary"
  type="button"
>
  Hello world
</button>
`;

exports[`Button Renders variant 'secondary' correctly 1`] = `
<button
  class="btn btn-secondary"
  type="button"
>
  Hello world
</button>
`;

exports[`Button Renders variant 'success' correctly 1`] = `
<button
  class="btn btn-success"
  type="button"
>
  Hello world
</button>
`;

exports[`Button Renders variant 'warning' correctly 1`] = `
<button
  class="btn btn-warning"
  type="button"
>
  Hello world
</button>
`;
